# wp15

./: .codespellrc  .gitignore  README.md
.github/workflows/: apptainer-build-push.yml  bidscramble.yaml  codespell.yaml
BIDScramble/: CHANGELOG.md  README.md  pyproject.toml
BIDScramble/bidscramble/: __init__.py  bidscrambler.py  bidscrambler_json.py  bidscrambler_nii.py  bidscrambler_tsv.py  merge.py  scramble.py  scramble_brainvision.py  scramble_fif.py  scramble_json.py  scramble_meeg.py  scramble_nii.py  scramble_pseudo.py  scramble_stub.py  scramble_swap.py  scramble_tsv.py  scrambler.py  scrambler_json.py  scrambler_meeg.py  scrambler_nii.py  scrambler_stub.py  scrambler_swap.py  scrambler_tsv.py
BIDScramble/source/: __init__.py  bidscramble.py  bidscramble_tsv.py
BIDScramble/tests/: test_bidscramble.py  test_bidscramblers.py  test_cli.py  test_merge.py  test_scramblers.py
Rpackages/getopt/R/: getopt.rdb  getopt.rdx
Rpackages/getopt/help/: getopt.rdb  getopt.rdx  paths.rds
Rpackages/optparse/: DESCRIPTION
Rpackages/optparse/Meta/: package.rds
Rpackages/optparse/R/: optparse.rdb
Rpackages/optparse/help/: optparse.rdb  paths.rds
doc/: README.md  data_rights_holder.md  data_user.md  product_owner.md
docs/: README.md  data_rights_holder.md  data_user.md  platform_operator.md  product_owner.md  workflow.md
generative-BIDS/: README.md  pyproject.toml
generative-BIDS/source/: genbids.py
infrastructure/: Makefile  README.md  addnoise.def  leaveoneout.def  mergegroup.def  mergegroup.py  mergeparticipant.def  mergesubjects.def  scramble.def  singlesubject.def
usecase-2.1/: README.md  apptainer.def  container-julia.def  container-matlab.def  container-python.def  container-r.def  download.def  mergegroup.def  mergegroup.py  mergegroup.sh  pipeline-julia.def  pipeline-matlab.def  pipeline-python.def  pipeline-r.def  pipeline.R  pipeline.def  pipeline_20240328.R  whitelist.txt
usecase-2.1/source/: bidsapp.m  pipeline.m
usecase-2.1/work/: pipeline.R  pipeline.jl  pipeline.m  pipeline.py
usecase-2.2/: README.md  download.def
usecase-2.3/: README.md  analyze_all_subjects.m  analyze_group.m  analyze_participant.m  analyze_single_subject.m  container.def  download.def  pipeline.def  whitelist.txt
usecase-2.3/source/: analyze_group.m  analyze_participant.m
usecase-2.3/work/: analyze_group.m  bidsapp.m
usecase-2.4/: ERP_Core_WB.m  ERP_Core_WB_install.m  ERP_Core_eeglab2brainvision.m  README.md  container.def  download.def  pipeline.def  whitelist.txt
usecase-2.4/2.3.A/: ERP_Core_WB.m
usecase-2.4/2.4.A/: ERP_Core_WB.m  Output_group_level_files.txt  output_manifest.txt
usecase-2.4/source/: ERP_Core_WB.m  ERP_Core_WBTest.m  ERP_Core_WB_install.m  ERP_Core_eeglab2brainvision.m  bidsapp.m
usecase-2.4/work/: ERP_Core_WB.m  ERP_Core_WBTest.m  ERP_Core_eeglab2brainvision.m  bidsapp.m  bidsapp_Test.m  vector2whitelist.m  whitelist2vector.m  whitelist_limo_outputs.m
usecase-2.5/: README.md  container.def  download.def  pipeline.def  whitelist.txt
usecase-2.5/source/: bidsapp.m  changePermissions.py  cleanDatabase.m  contrasts.m  convert_tsv_to_txt.m  coreg.m  createDataStructure.m  create_levelParameters.m  dataEvents.m  deleteVOE.m  estimateModel.m  extractEvents.m  firstLevel.m  firstLevel_works.m  onePatient.m  patientsDatabase.m  printResults.m  realign.m  removeSubject.m  secondLevel.m  secondLevel_works.m  segmentation.m  smooth.m  spm_preprocess.m  spm_runResults.m  taskContrasts.m  unzipDatabase.py  workPackageCerCo.m
usecase-2.5/work/: dataEvents.m  estimateModel.m  firstLevel_works.m  removeSubject.m  secondLevel_works.m  unzipMRIs.m
usecase-2.5/wp15/: SPM.mat  changePermissions.py  contrasts.m  convert_tsv_to_txt.m  coreg.m  createDataStructure.m  create_levelParameters.m  database.py  firstLevel.m  onePatient.m  taskContrasts.m  unzipDatabase.py  workPackageCerCo.m
usecase_2.1/: README.md  pipeline_20240328.R
