[build-system]
requires         = ['setuptools >= 62.2.0', 'wheel', 'tomli >= 1.1.0 ; python_version < "3.11"']
build-backend    = 'setuptools.build_meta'

[project]
name             = 'bidscramble'
description      = 'Generates scrambled datasets that are organized according to the Brain Imaging Data Structure (BIDS)'
version          = '0.0.3'
readme           = 'README.md'
requires-python  = '>= 3.8'
authors          = [{email = 'm.zwiers@donders.ru.nl'}, {name = 'Marcel Zwiers'}]
classifiers      = ['Programming Language :: Python :: 3.8',
                    'Operating System :: OS Independent',
                    'Intended Audience :: Science/Research']
dependencies     = ['pandas',
                    'numpy',
                    'tomli >= 1.1.0 ; python_version < "3.11"']

[project.urls]
homepage         = 'https://github.com/SIESTA-eu/wp15'
repository       = 'https://github.com/SIESTA-eu/wp15'

[project.scripts]
bidscrambler     = 'bidscramble.bidscrambler:main'
bidscrambler_tsv = 'bidscramble.bidscrambler_tsv:main'

[tool.pytest.ini_options]
testpaths        = ['tests']

[tool.tox]
legacy_tox_ini = """
[tox]
min_version      = 4.0
envlist          = py38, py312

[testenv]
deps             = pytest
commands         = pytest
"""
