[build-system]
requires        = ['setuptools >= 62.2.0', 'wheel']
build-backend   = 'setuptools.build_meta'

[project]
name            = 'bidscramble'
description     = 'Generates scrambled datasets that are organized according to the Brain Imaging Data Structure (BIDS)'
version         = '0.0.3'
readme          = 'README.md'
requires-python = '>= 3.9'
authors         = [{email = 'm.zwiers@donders.ru.nl'}, {name = 'Marcel Zwiers'}]
classifiers     = ['Programming Language :: Python :: 3.9',
                     'Operating System :: OS Independent',
                     'Intended Audience :: Science/Research']
dependencies    = ['pandas',
                   'numpy',
                   'scipy',
                   'nibabel',
                   'pybids',
                   'bids-validator',
                   'tqdm',
                   'drmaa',
                   'brainvision']

[project.optional-dependencies]
fif             = ['mne']

[project.urls]
homepage        = 'https://github.com/SIESTA-eu/wp15'
repository      = 'https://github.com/SIESTA-eu/wp15'

[project.scripts]
scramble        = 'bidscramble.scramble:main'
merge           = 'bidscramble.merge:main'

[tool.pytest.ini_options]
testpaths       = ['tests']

[tool.tox]
legacy_tox_ini = """
[tox]
min_version     = 4.0
envlist         = py39, py310, py311, py312, py313

[testenv]
extras          = fif
deps            = pytest
commands        = pytest
"""
