[build-system]
requires         = ['setuptools >= 62.2.0', 'wheel', 'tomli >= 1.1.0 ; python_version < "3.11"']
build-backend    = 'setuptools.build_meta'

[project]
name             = 'Generative BIDS'
description      = 'Converts and organises raw MRI data-sets according to the Brain Imaging Data Structure (BIDS)'
version          = '0.0.1'
readme           = 'README.md'
requires-python  = '>= 3.8'
authors          = [{email = 'm.zwiers@donders.ru.nl'}, {name = 'Marcel Zwiers'}]
classifiers      = ['Programming Language :: Python :: 3.8',
                    'Operating System :: OS Independent',
                    'Intended Audience :: Science/Research']
dependencies     = ['pandas',
                    'numpy',
                    'python-dateutil',
                    'jsonschema']

[project.urls]
homepage         = 'https://github.com/SIESTA-eu/wp15'
repository       = 'https://github.com/SIESTA-eu/wp15'

[project.scripts]
generatebids     = 'bidscoin.bcoin:main'
